<resources>
    <string name="app_name">brezyn</string>
    <string name="version">1.0</string>
    <string name="apkVersion">2.4.0</string>
    <string name="value">ADBSJHJS12547896</string>
    <string name="loading">Harap Tunggu&#8230;</string>
    <string name="button_ok">OK</string>
    <string name="button_back">Back</string>
    <string name="button_select">Pilih</string>
    <string name="button_cancel">Batal</string>
    <string name="button_accept">Setuju</string>
    <string name="button_reject">Tolak</string>
    <string name="button_resend">Kirim Ulang</string>
    <string name="button_edit">Edit</string>
    <string name="syarat_ketentuan">Syarat &amp; Ketentuan</string>
    <string name="regis_notif">Register Notifikasi</string>
    <string name="alert_exit">Keluar dari aplikasi?</string>
    <string name="sinkron_master_data">Sinkronisasi Master Data</string>
    <string name="login_offline_alert">Tidak dapat terhubung ke E-Form Server. Apakah ingin memasukkan data baru secara offline?</string>
    <string name="failed_cif_alert">Data tersimpan dan akan dikirim nanti. Apakah ingin memasukkan data baru secara offline?</string>
    <string name="response_cif_alert">Gagal melakukan pengecekan CIF. Apakah ingin memasukkan data baru secara offline?</string>
    <string name="send_data">Mengirim Data</string>
    <string name="send_identity_image">Mengirim Identitas</string>
    <string name="send_npwp_image">Mengirim NPWP</string>
    <string name="send_signature_image">Mengirim Tanda Tangan</string>
    <string name="send_applicant_image">Mengirim Foto Pernyataan</string>
    <string name="send_identity_image2">Mengirim Identitas Ke 2</string>
    <string name="send_npwp_image2">Mengirim NPWP Ke 2</string>
    <string name="send_signature_image2">Mengirim Tanda Tangan Ke 2</string>
    <string name="send_applicant_image2">Mengirim Foto Pernyataan Ke 2</string>
    <string name="send_dok_pendukung_image2">Mengirim Dokumen Pendukung Ke 2</string>
    <string name="send_dok_pendukung_image">Mengirim Dokumen Pendukung</string>
    <string name="send_kk_image">Mengirim Kartu Keluarga</string>
    <string name="send_selfie_image">Mengirim Foto Selfie</string>
    <string name="confirmation">Pengiriman Data Gagal</string>
    <string name="confirmation_send">Apakah seluruh data sudah terinput dengan benar dan Anda telah \n memahami serta menyetujui Syarat dan Ketentuan Umum Pembukaan Rekening?</string>
    <string name="resend">Kirim Lagi</string>
    <string name="send_later">Kirim Nanti</string>
    <string name="proses_pengiriman">Proses Pengiriman</string>
    <string name="alert_send_customer">Pengiriman Data Nasabah</string>
    <string name="external">External</string>
    <string name="internal">Internal</string>
    <string name="alert_get_customer_detail">Pengambilan Data Nasabah</string>
    <string name="alert_perso_card">Personalisasi Kartu</string>
    <string name="alert_verify_card">Aktifasi Kartu</string>
    <string name="alert_reload_customer_detail">Memuat Ulang Data Detail Nasabah</string>
    <string name="check_if_is_tbo">Silahkan checklist box jika TBO</string>
    <string name="alert_switch_loan">Apakah anda ingin membuka aplikasi E-Loan?</string>
    <string name="LoanCustomer_header">Detail Nasabah Loan</string>
    <string name="customer_header">Detail Nasabah Pertama</string>
    <string name="second_customer_header">Detail Nasabah Kedua</string>
    <string name="user_name">Username</string>
    <string name="username_login">Username or Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="phone_number">Nomor HP</string>
    <string name="pin">PIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="find_account">FIND YOUR ACCOUNT</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_send">Send</string>
    <string name="masukkan_otp">Massukkan One Time Password</string>
    <string name="otp">One Time Password</string>
    <string name="welcome_text">SELAMAT DATANG</string>
    <string name="registrasi">Reg:</string>
    <string name="calon_nasabah">Calon Nasabah</string>
    <string name="calon_nasabah_purna">Calon Nasabah Purna Bakti</string>
    <string name="verify_account">Aktifasi Kartu</string>
    <string name="new_loan">Loan Baru</string>
    <string name="renewal">Renewal</string>
    <string name="verify_loan">Verifikasi Loan</string>
    <string name="action_code">Action Code History</string>
    <string name="pengkinian_data">Pengkinian Data</string>
    <string name="attachment_header">Lampiran Nasabah</string>
    <string name="input_phone_number_title">Apakah nasabah sudah terdaftar?</string>
    <string name="input_phone_number_message">Masukkan Nomor Handphone</string>
    <string name="input_login">Silahkan masukkan Detail Login Anda</string>
    <string name="kembali">Kembali</string>
    <string name="persiapan_database">Persiapan Database</string>
    <string name="forgotpass_text">Enter your username or the email address associated with your account.</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="menu_calon_nasabah">CALON NASABAH</string>
    <string name="menu_calon_nasabah_purna">CALON NASABAH PURNA BAKTI</string>
    <string name="menu_verify">AKTIFASI KARTU</string>
    <string name="menu_new_loan">LOAN BARU</string>
    <string name="menu_renewal">RENEWAL</string>
    <string name="menu_verify_loan">VERIFIKASI LOAN</string>
    <string name="menu_profile_agen">PROFIL KU</string>
    <string name="menu_informasi_produk">INFORMASI PRODUK</string>
    <string name="menu_profile_btpn">PROFIL BTPN</string>
    <string name="menu_lokasi_cabang">LOKASI CABANG</string>
    <string name="menu_tanya_jawab">BANTUAN</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="pur_header">PROFIL KU</string>
    <string name="pb_header">PROFIL PERSONAL BANKER</string>
    <string name="cs_header">PROFIL CUSTOMER SERVICE</string>
    <string name="profil_agen">Profil Agen</string>
    <string name="Informasi_produk">Informasi Produk</string>
    <string name="lokasi_cabang">Lokasi Cabang</string>
    <string name="lokasi_subbranch">Lokasi Cabang Bantuan</string>
    <string name="lokasi_area">Lokasi Area</string>
    <string name="lokasi_region">Lokasi Region</string>
    <string name="tanya_jawab">Tanya Jawab</string>
    <string name="cara_pakai">Cara Pakai</string>
    <string name="header_help">Detail Bantuan</string>
    <string name="header_product">Detail Produk</string>
    <string name="simpan">Simpan</string>
    <string name="lanjut">Lanjut</string>
    <string name="kirim">Kirim</string>
    <string name="baca_syarat">Baca Syarat &amp; Ketentuan</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="tutup">Tutup</string>
    <string name="setuju">Setuju</string>
    <string name="activate">Aktifasi</string>
    <string name="cancel">Batal</string>
    <string name="tanggal_bergabung">Tanggal Bergabung</string>
    <string name="no_hp_terdaftar">No. HP Terdaftar</string>
    <string name="user_id">User ID</string>
    <string name="total_accepted">Total aplikasi diterima</string>
    <string name="total_rejected">Total aplikasi ditolak</string>
    <string name="total_applicant">Total aplikasi</string>
    <string name="last_applicant">Aplikasi terakhir</string>
    <string name="approved_ratio">Rasio approval</string>
    <string name="ktp">KTP</string>
    <string name="npwp">NPWP</string>
    <string name="tanda_tangan">Tanda Tangan</string>
    <string name="foto_nasabah">Foto Pernyataan</string>
    <string name="fingerprint">Sidik Jari</string>
    <string name="alamat">Alamat</string>
    <string name="provinsi_identity">Provinsi (Identitas) *</string>
    <string name="provinsi_house_stay">Provinsi (Rumah) *</string>
    <string name="provinsi_correspondent">Provinsi (Korespondensi)</string>
    <string name="provinsi_company">Provinsi (Perusahaan)</string>
    <string name="kota_identity">Kota (Identitas) *</string>
    <string name="kota_house_stay">Kota (Rumah) *</string>
    <string name="kota_correspondent">Kota (Korespondensi)</string>
    <string name="kota_company">Kota (Perusahaan)</string>
    <string name="kecamatan_identity">Kecamatan (Identitas) *</string>
    <string name="kecamatan_house_stay">Kecamatan (Rumah) *</string>
    <string name="kecamatan_correspondent">Kecamatan (Korespondensi)</string>
    <string name="kecamatan_company">Kecamatan (Perusahaan)</string>
    <string name="kelurahan_identity">Kelurahan (Identitas) *</string>
    <string name="kelurahan_house_stay">Kelurahan (Rumah) *</string>
    <string name="kelurahan_correspondent">Kelurahan (Korespondensi)</string>
    <string name="kelurahan_company">Kelurahan (Perusahaan)</string>
    <string name="rt_rw_identity">RT/RW (Identitas) *</string>
    <string name="rt_rw_house_stay">RT/RW (Rumah) *</string>
    <string name="rt_rw_correspondent">RT/RW (Korespondensi)</string>
    <string name="rt_rw_company">RT/RW (Perusahaan)</string>
    <string name="dummy_reg_date">31/12/14 23:55</string>
    <string name="dummy_phone_number">0878xxxxxxxxxx</string>
    <string name="dummy_total_applicant">25</string>
    <string name="term_condition">3.1 Subject to the terms of this License Agreement, Google grants you a limited, worldwide, royalty-free, non-assignable and non-exclusive license to use the SDK solely to develop applications to run on the Android platform.
	\n\n
	3.2 You agree that Google or third parties own all legal right, title and interest in and to the SDK, including any Intellectual Property Rights that subsist in the SDK. "Intellectual Property Rights" means any and all rights under patent law, copyright law, trade secret law, trademark law, and any and all other proprietary rights. Google reserves all rights not expressly granted to you.
	\n\n
	3.3 You may not use the SDK for any purpose not expressly permitted by this License Agreement.  Except to the extent required by applicable third party licenses, you may not: (a) copy (except for backup purposes), modify, adapt, redistribute, decompile, reverse engineer, disassemble, or create derivative works of the SDK or any part of the SDK; or (b) load any part of the SDK onto a mobile handset or any other hardware device except a personal computer, combine any part of the SDK with other software, or distribute any software or device incorporating a part of the SDK.
	\n\n
	3.4 You agree that you will not take any actions that may cause or result in the fragmentation of Android, including but not limited to distributing, participating in the creation of, or promoting in any way a software development kit derived from the SDK.
	\n\n
	3.5 Use, reproduction and distribution of components of the SDK licensed under an open source software license are governed solely by the terms of that open source software license and not this License Agreement.
	\n\n
	3.6 You agree that the form and nature of the SDK that Google provides may change without prior notice to you and that future versions of the SDK may be incompatible with applications developed on previous versions of the SDK. You agree that Google may stop (permanently or temporarily) providing the SDK (or any features within the SDK) to you or to users generally at Google\'s sole discretion, without prior notice to you.
	\n\n
	3.7 Nothing in this License Agreement gives you a right to use any of Google\'s trade names, trademarks, service marks, logos, domain names, or other distinctive brand features.
	\n\n
	3.8 You agree that you will not remove, obscure, or alter any proprietary rights notices (including copyright and trademark notices) that may be affixed to or contained within the SDK.\n\n</string>
</resources>