<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    android:background="@drawable/background_alert_dialog" >

    <com.btpn.sinaya.eform.custom.view.MTFTextView
        android:id="@+id/message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/transparent"
            android:orientation="horizontal" />

        <com.btpn.sinaya.eform.custom.view.MTFButton
            android:id="@+id/ok_button"
            style="@style/button_with_drawable_background"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/transparent"
            android:text="@string/ya"
            android:textColor="@drawable/button_text_color_blue" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/transparent"
            android:orientation="horizontal" />

        <com.btpn.sinaya.eform.custom.view.MTFButton
            android:id="@+id/cancel_button"
            style="@style/button_with_drawable_background"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/transparent"
            android:text="@string/tidak"
            android:textColor="@drawable/button_text_color_blue" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@color/transparent"
            android:orientation="horizontal" />
    </LinearLayout>

</LinearLayout>